--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -21,11 +21,11 @@
 - ✅ 17.JS 中有哪些方法可以实现继承
 - ✅ 18.深拷贝和浅拷贝
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
-- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
+- ✅ 🌹20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
-- ✅ 22.不用 promise, 那些可实现 promise generator
-- 23.Promise 原理、方法，promise race all allsetted
+- ✅ 🌹22.不用 promise, 那些可实现 promise generator
+- ✅ 🌹23.Promise 原理、方法，promise race all allsetted
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
 - ✅ 25.防抖和节流应用场景
 - ✅ 26.new 操作符
@@ -33,12 +33,25 @@
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
-- ✅ 31.柯里化
+- ✅ 🌹31.柯里化
 
-https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
-http://muyiy.cn/question/js/2.html
+# HTTP
+
+- ✅ 1.post 和 put 请求有什么区别
+- ✅ 2.http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，协商缓存浏览器如何判断
+- ✅ 3。说几个缓存相关的 HTTP 状态码， 301 和 302 区别，浏览器接收到 301 302 如何处理
+- ✅ 4.三次握手，四次挥手，为什么挥手不能用三次
+- ✅ 5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
+
+- ✅ 6.http 和 https 的区别, https 加密过程
+- ✅ 7.CDN 理解，有 CDN 和没有 CDN 区别
+- ✅ 8.DNS 寻址过程
+
+- TCP 和 UDP 区别是什么？
+- TCP 滑动窗口、重试机制
 
 # vue
+
 - vue 响应式原理
 - vue 数组是否相应
 - 虚拟 dom
@@ -47,7 +60,7 @@ http://muyiy.cn/question/js/2.html
 - 混入 minxi 的副作用
 - vue 项目多人协作如何实现统一管理
 - vue 组件如何通讯
-- vue-router 原理、模式区别，微信分享遇到问题,vue-router路由模式有什么？实现原理是什么 hashchange，window.history.pushState
+- vue-router 原理、模式区别，微信分享遇到问题,vue-router 路由模式有什么？实现原理是什么 hashchange，window.history.pushState
 - compiler 原理
 - diff 原理
 - vuex 的核心原理是什么
@@ -61,35 +74,13 @@ http://muyiy.cn/question/js/2.html
 - 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
 - vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
 
-# HTTP
-- http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
-- post 和 put 请求有什么区别
-- http 和 https 的区别
-- 三次握手，四次挥手，为什么挥手不能用三次
-- http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
-- https 加密过程
-- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
-- TCP 滑动窗口
-- TCP 重试机制
-- TCP和UDP区别是什么？
-- TCP是怎么做到保证数据传输正确的
-
 # node
+
 - 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
 - a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
 - 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
 - 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
 - 事件循环
-
-# TS
-- ts 中的类型断言如何做的
-- 如何用 es5 或者 es6 实现 ts 中的接口 interface
-- ts 泛型【我主动提到的】
-- ts 有哪些类型
-- ts 中的泛型
-- ts 中如何定义树结构的接口
-- ts 中 any 如何处理
-- ts 中的泛型
 
 # webpack
 
@@ -111,6 +102,17 @@ http://muyiy.cn/question/js/2.html
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
 
+# TS
+
+- ts 中的类型断言如何做的
+- 如何用 es5 或者 es6 实现 ts 中的接口 interface
+- ts 泛型【我主动提到的】
+- ts 有哪些类型
+- ts 中的泛型
+- ts 中如何定义树结构的接口
+- ts 中 any 如何处理
+- ts 中的泛型
+
 # react
 
 - redux 源码
@@ -125,7 +127,8 @@ http://muyiy.cn/question/js/2.html
 
 # 浏览器
 
-- ✅  浏览器渲染过程
+- ✅ 浏览器渲染过程
+- 浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - 跨域的解决方案
 - 跨页面传输数据有哪些方式
 - 个二级域名不同 cookie 怎么传输
@@ -133,13 +136,10 @@ http://muyiy.cn/question/js/2.html
 - cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
 - 有做 ssr，预渲染和 ssr 区别
 
-# 安全
-
-- csrf
-- 前端在XSS、XSF防御是如何做的
-
 # 优化
+
 https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
+
 - 性能优化，你会从哪几个方面考虑性能优化
 
 - 打包优化
@@ -257,19 +257,10 @@ function fn(arr, n, sum)
 ```js
 // [1,2,3,6,7,3,'2','3','3'] 出现次数最多的项 出现了几次
 ```
+
 - 写一个正则表达式，校验 aabb...
 - 安全取值之类的
 - 封装 localstorage
-
-# 项目
-
-- electron vue3.0 vite ts
-- react 开发项目
-- 低代码
-- 微前端架构
-- 组件库、通用库
-- chrome 插件
-- vscode 插件
 
 # 小程序
 
@@ -283,7 +274,6 @@ function fn(arr, n, sum)
 - 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
 
-
 # css
 
 - ✅ 水平垂直居中
@@ -295,8 +285,27 @@ function fn(arr, n, sum)
 - css 多行...
 - display none opacity: 0 visibility:hidden
 - css3 属性
-- grid 
+- grid
+
 # html
+
 - 左边定宽度，右边自使用，高度填满整个屏幕
 - 浏览器工作原理
 - defer
+
+# 项目
+
+- electron vue3.0 vite ts
+- react 开发项目
+- 低代码
+- 微前端架构
+- 组件库、通用库
+- chrome 插件
+- vscode 插件
+
+# 这些
+
+正则
+
+https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
+http://muyiy.cn/question/js/2.html
