--- a/面试题/js/20.设计模式了解应用,发布订阅模式,单例模式.md
+++ b/面试题/js/20.设计模式了解应用,发布订阅模式,单例模式.md
@@ -156,6 +156,32 @@ salesOffices.trigger( 'squareMeter88', 2000000 ); // 输出:2000000
 salesOffices.trigger( 'squareMeter100', 3000000 ); // 输出:3000000
 ```
 
+```js
+class myEvent {
+  constructor(){
+    this.target = []
+  }
+  listen(type, fn) {
+    this.target[type] = this.target[type] || [];
+    this.target[type].push(fn)
+  }
+  trigger(type, ...args) {
+    const fns = this.target[type];
+    fns.map(i => i(...args));
+  }
+}
+
+const child = new myEvent();
+
+child.listen('type1',function(arg){
+  console.log('type1', arg, '1')
+})
+child.listen('type2',function(){
+  console.log('type2', 2)
+})
+child.trigger('type1', 2000)
+child.trigger('type2', 2000)
+```
 
 - 观察者模式
 ```js
@@ -189,3 +215,16 @@ s.attach(o2)
 s.setState('不开心了')
 s.setState('开心了')
 ```
+
+# 发布订阅和观察者区别
+
+实现了对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知，并自动更新
+
+观察者
+  由具体目标调度，每个被订阅的目标里面都需要有对观察者的处理，这种处理方式比较直接粗暴，但是会造成代码的冗余。
+发布者
+  中统一由调度中心进行处理，订阅者和发布者互不干扰，消除了发布者和订阅者之间的依赖。
+  这样一方面实现了解耦，还有就是可以实现更细粒度的一些控制。比如发布者发布了很多消息，
+  但是不想所有的订阅者都接收到，就可以在调度中心做一些处理，类似于权限控制之类的。还可以做一些节流操作。
+  
+
