--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -50,6 +50,32 @@
 - TCP 和 UDP 区别是什么？
 - TCP 滑动窗口、重试机制
 
+# 浏览器
+
+- ✅ 浏览器进程，渲染过进程，渲染流程
+- ✅ defer
+- 浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
+- 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
+- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
+- 有做 ssr，预渲染和 ssr 区别
+- 哪些资源可以使用cdn引入，如何判断
+
+# css
+
+- ✅ 水平垂直居中
+- ✅ 几个简单的 css 问题：flex 布局、动画
+- ✅ position 那些值，作用什么
+- ✅ 盒子模型
+- ✅ BFC 应用
+- ✅ display none opacity: 0 visibility:hidden
+- css 多行...
+- css3 属性
+- grid fr
+- 左边定宽度，右边自使用，高度填满整个屏幕
+- 圣杯、双飞翼布局
+- viewport meta
+- 1px dpi
+
 # vue
 
 - vue 响应式原理
@@ -124,17 +150,6 @@
 
 - react vs vue
 - mvvm 理解
-
-# 浏览器
-
-- ✅ 浏览器渲染过程
-- 浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
-- 跨域的解决方案
-- 跨页面传输数据有哪些方式
-- 个二级域名不同 cookie 怎么传输
-- abc 三个域名 localstorage 共享
-- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
-- 有做 ssr，预渲染和 ssr 区别
 
 # 优化
 
@@ -274,24 +289,6 @@ function fn(arr, n, sum)
 - 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
 
-# css
-
-- ✅ 水平垂直居中
-- ✅ 几个简单的 css 问题：flex 布局、动画
-- ✅ position 那些值，作用什么
-- 盒子模型
-- 圣杯、双飞翼布局
-- BFC\IFC\GFC 应用
-- css 多行...
-- display none opacity: 0 visibility:hidden
-- css3 属性
-- grid
-
-# html
-
-- 左边定宽度，右边自使用，高度填满整个屏幕
-- 浏览器工作原理
-- defer
 
 # 项目
 
@@ -303,9 +300,6 @@ function fn(arr, n, sum)
 - chrome 插件
 - vscode 插件
 
-# 这些
-
-正则
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 http://muyiy.cn/question/js/2.html
