--- a/面试题/js/21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么.md
+++ b/面试题/js/21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么.md
@@ -23,6 +23,44 @@ xhr.onreadystatechange = function () {
 }
 ```
 
+```js
+function ajax(opt) {
+  var xhr = XMLHttpRequest ? new XMLHttpRequest() : new window.ActivedXObject('Microsoft.XMLHTTP')
+  var data = opt.data,
+  url = opt.url,
+  type = opt.type.toUpperCase(),
+  dataArr = []
+  for(k in data) {
+    dataArr.push(k + '=' + data[k])
+  }
+  if (type === 'GET') {
+    url = url + '?' + dataArr.join('&')
+    xhr.open(type, url.replace(/\?&/g, ''), true)
+    xhr.send()
+  } else if (type === 'POST') {
+    xhr.open(type, url, true)
+    xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded')
+    xhr.send(dataArr.join('&'))
+  }
+  xhr.onload = function() {
+    if (xhr.status === 200 || xhr.status === 304) {
+      var res;
+      if (opt.success || opt.success instanceof Function) {
+        res = xhr.responseText;
+        if (typeof res === 'string') {
+          res = JSON.parse(res)
+          opt.success.call(xhr,res)
+        }
+      }
+    } else {
+      if (opt.error || opt.error instanceof Function) {
+          opt.error.call(xhr,res)
+      }
+    }
+  }
+}
+```
+
 # fetch
 ES6出现的, 使用了es6 promise 对象，fetch 不是 ajax 的进一步封装，而是原生js，没有使用 XMLHttpRequest 对象
 优：解决回调地狱，简洁
