--- a/面试题/浏览器/3.安全.md
+++ b/面试题/浏览器/3.安全.md
@@ -230,3 +230,8 @@ window.opener 表示打开当前窗体页面的的父窗体的是谁。例如，
 rel=noopener 规定禁止新页面传递源页面的地址，通过设置了此属性的链接打开的页面，其 window.opener 的值为 null。
 2. 将外链替换为内部的跳转连接服务，跳转时先跳到内部地址，再由服务器 redirect 到外链。
 3. 可以由 widow.open 打开外链。
+
+# iframe 点击劫持的介绍
+
+[iframe 点击劫持的介绍](https://javascript.info/clickjacking)
+[点击劫持攻击](https://zh.javascript.info/clickjacking)
