--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -21,11 +21,11 @@
 - ✅ 17.JS 中有哪些方法可以实现继承
 - ✅ 18.深拷贝和浅拷贝
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
-- ✅ 🌹20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
+- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗🌹
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
-- ✅ 🌹22.不用 promise, 那些可实现 promise generator
-- ✅ 🌹23.Promise 原理、方法，promise race all allsetted
+- ✅ 22.不用 promise, 那些可实现 promise generator🌹
+- ✅ 23.Promise 原理、方法，promise race all allsetted🌹
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
 - ✅ 25.防抖和节流应用场景
 - ✅ 26.new 操作符
@@ -33,7 +33,7 @@
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
-- ✅ 🌹31.柯里化
+- ✅ 31.柯里化
 
 # HTTP
 
@@ -52,32 +52,37 @@
 
 # 浏览器
 
-- ✅ 浏览器进程，渲染过进程，渲染流程
-- ✅ defer
-- 浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
+- ✅ 1.浏览器进程，渲染过进程，渲染流程
+- ✅ 2.defer
+- ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
-- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
+- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用cdn引入，如何判断
 - 有做 ssr，预渲染和 ssr 区别
-- 哪些资源可以使用cdn引入，如何判断
+- 多个link标签执行渲染顺序
 
 # css
 
-- ✅ 水平垂直居中
-- ✅ 几个简单的 css 问题：flex 布局、动画
-- ✅ position 那些值，作用什么
-- ✅ 盒子模型
-- ✅ BFC 应用
-- ✅ display none opacity: 0 visibility:hidden
-- css 多行...
-- css3 属性
-- grid fr
+- ✅ 1.水平垂直居中
+- ✅ 2.几个简单的 css 问题：flex 布局、动画
+- ✅ 3.position 那些值，作用什么
+- ✅ 4.display none opacity: 0 visibility:hidden
+- ✅ 5.回流&重绘
+- ✅ 6.BFC 应用、盒子模型
 - 左边定宽度，右边自使用，高度填满整个屏幕
-- 圣杯、双飞翼布局
+- grid fr
 - viewport meta
 - 1px dpi
 
-# vue
+- rem原理
+- css的transform和animation区别
+- css3 属性
+- css 多行...
+- 圣杯、双飞翼布局
+- css中的px，rem，em，vw，vh
+- css中的scope为什么可以实现局部作用
+- 哪些css可以开启硬件加速
 
+# vue
 - vue 响应式原理
 - vue 数组是否相应
 - 虚拟 dom
@@ -93,6 +98,7 @@
 - 按钮级别权限
 - axios 如何处理携带 cookies
 
+- vuex的数据流
 - setup this
 - reactive ref 区别
 - 微前端
@@ -118,7 +124,7 @@
 
 - webpack 如何实现的模块依赖关系
 - webpack 的 tree shaking 是怎么实现的
-
+- webpack有做过哪些打包优化吗
 - 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
 
@@ -127,6 +133,7 @@
 
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
+- style-loader和css-loader做了什么
 
 # TS
 
@@ -276,6 +283,53 @@ function fn(arr, n, sum)
 - 写一个正则表达式，校验 aabb...
 - 安全取值之类的
 - 封装 localstorage
+
+```js
+const fetch = () => {
+  return new Promise((reslove) => {
+    setTimeout(() => {
+      reslove()
+    }, 1000)
+  })
+}
+
+function maxLimiteRequest(max = 5) {
+  let currentSize = 0;
+  let queue = [];
+  const carryTask = () => {
+    if (!queue.length) return;
+    const [url, reslove] = queue.shift();
+    fetch(url).then(res => {
+      console.log(url);
+
+      reslove(url);
+    }).finally(() => {
+      if (!queue.length) {
+        currentSize--
+      }
+      console.log('结束', currentSize);
+      carryTask();
+    })
+  }
+  return function (url) {
+    return new Promise((reslove) => {
+      let task = [url, reslove];
+      queue.push(task);
+      if (currentSize < max) {
+        currentSize++;
+        carryTask();
+      }
+    })
+  }
+
+}
+
+let request1 = maxLimiteRequest();
+for (let i = 0; i < 10; i++) {
+  request1(i).then(res => {
+  })
+}
+```
 
 # 小程序
 
