--- a/面试题/js/29.模块化.md
+++ b/面试题/js/29.模块化.md
@@ -36,3 +36,29 @@ defined(function(require, exports, module){
   var a = require('a');
   
 })
+
+# export
+```js
+//-------------a.js---------------------
+export default 'hello'
+
+//-------------index.js---------------------
+console.log(_) // hello 可以打印出来, 函数提升类似
+import _ from './a.js' 
+// if () {
+// 		console.log(import _ from './a.js') // ❌ 只能放到最外层作用域
+// }
+console.log(_) /// hello;
+_ = 'word' // ❌ 不能修改导出后的结果
+```
+
+## 异步导入
+```js
+let btn = document.createElement('button')
+btn.addEventListener('click', function(){
+	import('./d.js').then((res)=>{ // import 返回是一个 promise，结果返回带 default
+    	console.log(res.default) // import * as res from './d.js'
+  })
+})
+document.body.appendChild(btn);
+```
