--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -21,7 +21,7 @@
 - ✅ 17.JS 中有哪些方法可以实现继承
 - ✅ 18.深拷贝和浅拷贝
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
-- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗🌹
+- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗 🌹
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - ✅ 22.不用 promise, 那些可实现 promise generator🌹
@@ -55,10 +55,8 @@
 - ✅ 1.浏览器进程，渲染过进程，渲染流程
 - ✅ 2.defer
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
+- ✅ cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用 cdn 引入，如何判断 ping
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
-- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用cdn引入，如何判断
-- 有做 ssr，预渲染和 ssr 区别
-- 多个link标签执行渲染顺序
 
 # css
 
@@ -68,21 +66,18 @@
 - ✅ 4.display none opacity: 0 visibility:hidden
 - ✅ 5.回流&重绘
 - ✅ 6.BFC 应用、盒子模型
-- 左边定宽度，右边自使用，高度填满整个屏幕
-- grid fr
-- viewport meta
-- 1px dpi
-
-- rem原理
-- css的transform和animation区别
-- css3 属性
-- css 多行...
-- 圣杯、双飞翼布局
-- css中的px，rem，em，vw，vh
-- css中的scope为什么可以实现局部作用
-- 哪些css可以开启硬件加速
+- ✅ 7.左边定宽度，右边自使用，高度填满整个屏幕
+- ✅ 8.圣杯、双飞翼布局
+- ✅ 9.css 的 transform 和 animation 区别
+- ✅ 10.grid fr grid-template-columns
+- ✅ 11.css 中的 scope 为什么可以实现局部作用
+- ✅ 12.哪些 css 可以开启硬件加速 transform\opacity\filter
+- ✅ 13.1px dip dp
+- ✅ 14.css3 属性
+- ✅ 15.css 中的 px，rem，em，vw，vh
 
 # vue
+
 - vue 响应式原理
 - vue 数组是否相应
 - 虚拟 dom
@@ -98,7 +93,7 @@
 - 按钮级别权限
 - axios 如何处理携带 cookies
 
-- vuex的数据流
+- vuex 的数据流
 - setup this
 - reactive ref 区别
 - 微前端
@@ -124,7 +119,7 @@
 
 - webpack 如何实现的模块依赖关系
 - webpack 的 tree shaking 是怎么实现的
-- webpack有做过哪些打包优化吗
+- webpack 有做过哪些打包优化吗
 - 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
 
@@ -133,7 +128,7 @@
 
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
-- style-loader和css-loader做了什么
+- style-loader 和 css-loader 做了什么
 
 # TS
 
@@ -200,7 +195,6 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 
 - H5 屏幕适配方案对比
 - 移动端适配的原理及多种方案对比
-- 1px 在不同的手机屏幕渲染出来为什么不一样
 - webview 和原生交互是如何实现的，搭桥的原理
 - 然后问了一下移动端兼容性问题，比如键盘遮挡 input
 
@@ -288,10 +282,10 @@ function fn(arr, n, sum)
 const fetch = () => {
   return new Promise((reslove) => {
     setTimeout(() => {
-      reslove()
-    }, 1000)
-  })
-}
+      reslove();
+    }, 1000);
+  });
+};
 
 function maxLimiteRequest(max = 5) {
   let currentSize = 0;
@@ -299,18 +293,20 @@ function maxLimiteRequest(max = 5) {
   const carryTask = () => {
     if (!queue.length) return;
     const [url, reslove] = queue.shift();
-    fetch(url).then(res => {
-      console.log(url);
+    fetch(url)
+      .then((res) => {
+        console.log(url);
 
-      reslove(url);
-    }).finally(() => {
-      if (!queue.length) {
-        currentSize--
-      }
-      console.log('结束', currentSize);
-      carryTask();
-    })
-  }
+        reslove(url);
+      })
+      .finally(() => {
+        if (!queue.length) {
+          currentSize--;
+        }
+        console.log("结束", currentSize);
+        carryTask();
+      });
+  };
   return function (url) {
     return new Promise((reslove) => {
       let task = [url, reslove];
@@ -319,15 +315,13 @@ function maxLimiteRequest(max = 5) {
         currentSize++;
         carryTask();
       }
-    })
-  }
-
+    });
+  };
 }
 
 let request1 = maxLimiteRequest();
 for (let i = 0; i < 10; i++) {
-  request1(i).then(res => {
-  })
+  request1(i).then((res) => {});
 }
 ```
 
@@ -343,17 +337,14 @@ for (let i = 0; i < 10; i++) {
 - 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
 
-
 # 项目
 
-- electron vue3.0 vite ts
-- react 开发项目
+- vue3.0 vite ts
+- 组件库
+- 微前端
 - 低代码
-- 微前端架构
-- 组件库、通用库
-- chrome 插件
-- vscode 插件
-
+- 监控
+- react 开发项目
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 http://muyiy.cn/question/js/2.html
