--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -21,7 +21,7 @@
 - ✅ 17.JS 中有哪些方法可以实现继承
 - ✅ 18.深拷贝和浅拷贝
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
-- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗🌹
+- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗 🌹
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - ✅ 22.不用 promise, 那些可实现 promise generator🌹
@@ -34,6 +34,7 @@
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
+- 0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
 
 # HTTP
 
@@ -47,8 +48,10 @@
 - ✅ 7.CDN 理解，有 CDN 和没有 CDN 区别
 - ✅ 8.DNS 寻址过程
 
-- TCP 和 UDP 区别是什么？
 - TCP 滑动窗口、重试机制
+- TCP 和 UDP 区别是什么
+- get 和 post 有什么区别
+- 谈谈你对 dns-prefetch 的理解
 
 # 浏览器
 
@@ -56,9 +59,13 @@
 - ✅ 2.defer
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
-- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用cdn引入，如何判断
+- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用 cdn 引入，如何判断
 - 有做 ssr，预渲染和 ssr 区别
-- 多个link标签执行渲染顺序
+- 多个 link 标签执行渲染顺序
+- link 标签会不会阻塞页面的渲染？说一下原因？
+- js 会阻塞页面的渲染吗？说一下原因？
+- css 会阻塞 html 的解析吗？为什么？
+- css 会阻塞 html 的渲染吗？为什么？
 
 # css
 
@@ -68,21 +75,23 @@
 - ✅ 4.display none opacity: 0 visibility:hidden
 - ✅ 5.回流&重绘
 - ✅ 6.BFC 应用、盒子模型
+- flex: 1 代表什么意思
 - 左边定宽度，右边自使用，高度填满整个屏幕
 - grid fr
 - viewport meta
 - 1px dpi
 
-- rem原理
-- css的transform和animation区别
+- rem 原理
+- css 的 transform 和 animation 区别
 - css3 属性
 - css 多行...
 - 圣杯、双飞翼布局
-- css中的px，rem，em，vw，vh
-- css中的scope为什么可以实现局部作用
-- 哪些css可以开启硬件加速
+- css 中的 px，rem，em，vw，vh
+- css 中的 scope 为什么可以实现局部作用
+- 哪些 css 可以开启硬件加速
 
 # vue
+
 - vue 响应式原理
 - vue 数组是否相应
 - 虚拟 dom
@@ -97,10 +106,11 @@
 - vuex 的核心原理是什么
 - 按钮级别权限
 - axios 如何处理携带 cookies
+- vuex 的数据流
 
-- vuex的数据流
 - setup this
 - reactive ref 区别
+
 - 微前端
 - vue+ts 使用中有哪些坑
 - 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
@@ -116,6 +126,7 @@
 
 # webpack
 
+- webpack 打包原理
 - 单页面多页面问题，如何给客户私有化部署
 - 前端性能优化从 webpack 方面能做哪些优化
 
@@ -124,7 +135,7 @@
 
 - webpack 如何实现的模块依赖关系
 - webpack 的 tree shaking 是怎么实现的
-- webpack有做过哪些打包优化吗
+- webpack 有做过哪些打包优化吗
 - 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
 
@@ -133,18 +144,13 @@
 
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
-- style-loader和css-loader做了什么
+- style-loader 和 css-loader 做了什么
 
 # TS
 
-- ts 中的类型断言如何做的
-- 如何用 es5 或者 es6 实现 ts 中的接口 interface
-- ts 泛型【我主动提到的】
-- ts 有哪些类型
-- ts 中的泛型
-- ts 中如何定义树结构的接口
-- ts 中 any 如何处理
-- ts 中的泛型
+- ts 中的类型断言如何做的 (a1 as string).length \ (<number>a1).toFixed(2)
+- ts 有哪些类型: any number string array boolean null undefined enum tuple void never
+- ts 中的泛型 <T>
 
 # react
 
@@ -288,10 +294,10 @@ function fn(arr, n, sum)
 const fetch = () => {
   return new Promise((reslove) => {
     setTimeout(() => {
-      reslove()
-    }, 1000)
-  })
-}
+      reslove();
+    }, 1000);
+  });
+};
 
 function maxLimiteRequest(max = 5) {
   let currentSize = 0;
@@ -299,18 +305,20 @@ function maxLimiteRequest(max = 5) {
   const carryTask = () => {
     if (!queue.length) return;
     const [url, reslove] = queue.shift();
-    fetch(url).then(res => {
-      console.log(url);
+    fetch(url)
+      .then((res) => {
+        console.log(url);
 
-      reslove(url);
-    }).finally(() => {
-      if (!queue.length) {
-        currentSize--
-      }
-      console.log('结束', currentSize);
-      carryTask();
-    })
-  }
+        reslove(url);
+      })
+      .finally(() => {
+        if (!queue.length) {
+          currentSize--;
+        }
+        console.log("结束", currentSize);
+        carryTask();
+      });
+  };
   return function (url) {
     return new Promise((reslove) => {
       let task = [url, reslove];
@@ -319,15 +327,13 @@ function maxLimiteRequest(max = 5) {
         currentSize++;
         carryTask();
       }
-    })
-  }
-
+    });
+  };
 }
 
 let request1 = maxLimiteRequest();
 for (let i = 0; i < 10; i++) {
-  request1(i).then(res => {
-  })
+  request1(i).then((res) => {});
 }
 ```
 
@@ -343,7 +349,6 @@ for (let i = 0; i < 10; i++) {
 - 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
 
-
 # 项目
 
 - electron vue3.0 vite ts
@@ -353,7 +358,6 @@ for (let i = 0; i < 10; i++) {
 - 组件库、通用库
 - chrome 插件
 - vscode 插件
-
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 http://muyiy.cn/question/js/2.html
