--- a/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
+++ b/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
@@ -1,18 +1,39 @@
 # http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
 
-http1.1
+## http1.1
 
 - 长链接、断点续传，管线化
+  http1.1
 
-http2
+引入了持久链接，即 TCP 默认不关闭，可以被多个请求复用
+引入管道机制，一个 TCP 连接，可以同时发送多个请求
+新增了一些缓存的字段
+新增了一些方法，PUT、DELETE、OPTIONS、PATCH
+支持断点续传，通过请求头字段 Rang 来实现
+http2.0
+
+## http2
 
 - 信道复用
 - 分帧传输，又上下文联系，进行组合，并发送数据
 - server push
 
-http3
+头部压缩
+多路复用
+二进制传输，头信息和数据体都是二进制
+请求优先级， 设置数据帧的优先级，让服务器优先处理
+服务器主动推送消息
+
+## http3
 
 - 扩展了多路复用
 - 传输速度提升
 - 头部压缩
 - 拥塞控制
+
+管道机制会造成什么样的问题，http2.0 是怎么解决的
+头部压缩的原理是什么
+options 方法的作用
+http2.0 允许服务器主动推送消息，那跟 WebSocket 有什么区别吗
+
+https://juejin.cn/post/6844904100035821575#heading-91
