--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -86,36 +86,23 @@
 
 # vue
 
-- vue 响应式原理
-- vue 数组是否相应
-- 虚拟 dom
-- 全局注册组件
-- vue use 干了什么
-- 混入 minxi 的副作用
-- vue 项目多人协作如何实现统一管理
-- vue 组件如何通讯
-- vue-router 原理、模式区别，微信分享遇到问题,vue-router 路由模式有什么？实现原理是什么 hashchange，window.history.pushState
+- ✅ 1.vue 响应式原理
+- ✅ 2.vue 数组是否响应
+- ✅ 3.虚拟 dom
+- ✅ 4.全局注册组件、vue use 干了什么
+- ✅ 5.vue 组件如何通讯
+- ✅ vue-router 原理、模式区别，微信分享遇到问题,vue-router 路由模式有什么？实现原理是什么 hashchange，window.history.pushState
+- ✅ axios 如何处理携带 cookies axios.defaults.withCredentials = true;
+
+- vuex 的数据流 核心原理是什么
+
 - compiler 原理
 - diff 原理
-- vuex 的核心原理是什么
-- 按钮级别权限
-- axios 如何处理携带 cookies
-- vuex 的数据流
 
 - setup this
 - reactive ref 区别
 - 微前端
 - vue+ts 使用中有哪些坑
-- 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
-- vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
-
-# node
-
-- 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
-- a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
-- 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
-- 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
-- 事件循环
 
 # webpack
 
@@ -138,6 +125,14 @@
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
 - style-loader 和 css-loader 做了什么
+
+# node
+
+- 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
+- a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
+- 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
+- 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
+- 事件循环
 
 # TS
 
