--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -93,16 +93,11 @@
 - ✅ 5.vue 组件如何通讯
 - ✅ vue-router 原理、模式区别，微信分享遇到问题,vue-router 路由模式有什么？实现原理是什么 hashchange，window.history.pushState
 - ✅ axios 如何处理携带 cookies axios.defaults.withCredentials = true;
-
-- vuex 的数据流 核心原理是什么
+- ✅ 6.reactive ref 区别
+- ✅ 7.vuex 的数据流 核心原理是什么
 
 - compiler 原理
 - diff 原理
-
-- setup this
-- reactive ref 区别
-- 微前端
-- vue+ts 使用中有哪些坑
 
 # webpack
 
