--- a/面试题/HTTP/6.http 和 https 的区别.md
+++ b/面试题/HTTP/6.http 和 https 的区别.md
@@ -43,3 +43,26 @@ https 加密使用的加密套件
 密码: rsa 双层 md5
 
 https://zhuanlan.zhihu.com/p/43789231
+
+## 对称加密问题(为什么要用对称加密+非对称加密)
+
+因为一个相同钥匙，在网络上传输，实际上等于明文，中间人可以获取到密钥进行传输
+
+## 非对称加密(为什么不能只用非对称加密)
+
+- 客户端发送给服务器：客户端用(服务器的公钥)加密，服务器用自己私钥解开
+- 服务器发送给客户端：服务器用(客户端的公钥)加密，客户端用自己私钥解开
+  带来重要问题：耗时间，
+
+## 非对称加密+对称加密(为什么需要数字证书)
+
+- 非堆成：客户端发送给服务器：客户端用(服务器的公钥)加密自己的密钥，服务器用自己私钥解开的到密钥
+- 对称加密：用密钥进行加密传输
+
+带来的问题：有可能出现狸猫换太子，根本原因是浏览器**无法确认收到的公钥是不是网站自己**的
+
+- 中间人劫持到公钥 A，保存下来，把数据包中的公钥 A 替换成自己伪造的公钥 B（它当然也拥有公钥 B 对应的私钥 B’）
+- 中间人劫持后用私钥 B’解密得到密钥 X，再用公钥 A 加密后传给服务器。
+- 服务器拿到后用私钥 A’ 解密得到密钥 X
+
+## 为什么需要数字签名
