--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -47,11 +47,10 @@
 - ✅ 6.http 和 https 的区别, https 加密过程
 - ✅ 7.CDN 理解，有 CDN 和没有 CDN 区别
 - ✅ 8.DNS 寻址过程
-
-- TCP 滑动窗口、重试机制
-- TCP 和 UDP 区别是什么
-- get 和 post 有什么区别
-- 谈谈你对 dns-prefetch 的理解
+- ✅ 9.get 和 post 有什么区别
+- ✅ 10.TCP 和 UDP 区别是什么
+- ✅ 11.谈谈你对 dns-prefetch 的理解
+- 12.TCP 滑动窗口、重试机制
 
 # 浏览器
 
@@ -83,6 +82,12 @@
 - ✅ 13.1px dip dp
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
+
+# TS
+
+- ts 中的类型断言如何做的 (a1 as string).length \ (<number>a1).toFixed(2)
+- ts 有哪些类型: any number string array boolean null undefined enum tuple void never
+- ts 中的泛型 <T>
 
 # vue
 
@@ -128,12 +133,6 @@
 - 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
 - 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
 - 事件循环
-
-# TS
-
-- ts 中的类型断言如何做的 (a1 as string).length \ (<number>a1).toFixed(2)
-- ts 有哪些类型: any number string array boolean null undefined enum tuple void never
-- ts 中的泛型 <T>
 
 # react
 
@@ -334,11 +333,11 @@ for (let i = 0; i < 10; i++) {
 # 项目
 
 - vue3.0 vite ts
-- 组件库
 - 微前端
-- 低代码
-- 组件库、通用库
 - 监控
+
+- 组件库、通用库
+- 低代码
 - react 开发项目
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
