--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -106,25 +106,25 @@
 
 # webpack
 
-- webpack 打包原理
-- 单页面多页面问题，如何给客户私有化部署
-- 前端性能优化从 webpack 方面能做哪些优化
-
-- webpack 分包加载用的是哪个，分包的原理？
 - webpack 中 loader 和 plugin 的区别
+- webpack 的三种 hash、chunkHash、contentHash 有什么区别
+- source map 怎么用
+- 如何实现一个 plugin 插件
+
+- webpack 打包原理，实现思路是什么
+- webpack 有做过哪些打包构建优化吗，前端性能优化
+
+- 单页面多页面问题，如何给客户私有化部署
+- webpack 分包加载用的是哪个，分包的原理？
 
 - webpack 如何实现的模块依赖关系
-- webpack 的 tree shaking 是怎么实现的
-- webpack 有做过哪些打包优化吗
-- 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
+- loader 执行顺序
+- webpack 的 tree shaking 是怎么实现的
+- dll
+- 热更新
 
-- webpack 的三种 hash、chunkHash、contentHash 有什么区别
-- module.export / exports default exports / exports require/import 区别
-
-- 如何实现一个 plugin 插件
 - 新能指标、RAIL
-- style-loader 和 css-loader 做了什么
 
 # node
 
