--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -106,13 +106,14 @@
 
 # webpack
 
-- webpack 中 loader 和 plugin 的区别
-- webpack 的三种 hash、chunkHash、contentHash 有什么区别
-- source map 怎么用
-- 如何实现一个 plugin 插件
+- ✅ 1.webpack 中 loader 和 plugin 的区别
+- ✅ 2.webpack 的三种 hash、chunkHash、contentHash 有什么区别
+- ✅ 3.source map 怎么用
+- ✅ 4.如何实现一个 plugin 插件
 
+- webpack 构建过程
+- webpack 构建优化、前端性能优化
 - webpack 打包原理，实现思路是什么
-- webpack 有做过哪些打包构建优化吗，前端性能优化
 
 - 单页面多页面问题，如何给客户私有化部署
 - webpack 分包加载用的是哪个，分包的原理？
