--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -110,22 +110,18 @@
 - ✅ 2.webpack 的三种 hash、chunkHash、contentHash 有什么区别
 - ✅ 3.source map 怎么用
 - ✅ 4.如何实现一个 plugin 插件
+- ✅ 5.webpack 构建过程
+- ✅ 6.webpack 构建优化、前端性能优化
 
-- webpack 构建过程
-- webpack 构建优化、前端性能优化
-- webpack 打包原理，实现思路是什么
+- 7.loader 执行顺序
+- 8.webpack 分包加载用的是哪个，分包的原理
+- 9.webpack 的 tree shaking 是怎么实现的
+- 10.热更新 HMR
 
-- 单页面多页面问题，如何给客户私有化部署
-- webpack 分包加载用的是哪个，分包的原理？
+- webpack 如何实现的模块依赖关系 traverse ast ImportDeclaration
+- webpack 如何指定模块化规范（amd、cmd 这些）libraryTarget: 'umd',
+- dll 动态链接库
 
-- webpack 如何实现的模块依赖关系
-- webpack 如何指定模块化规范（amd、cmd 这些）
-- loader 执行顺序
-- webpack 的 tree shaking 是怎么实现的
-- dll
-- 热更新
-
-- 新能指标、RAIL
 
 # node
 
@@ -168,6 +164,7 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 
 - CSS 相关性能优化
 - performance
+- 新能指标、RAIL
 
 # 算法
 
